@@ -1,5 +1,5 @@
 if config['backbone']
-  gem 'rails-backbone', :version => '>= 0.7.0'
+  gem 'rails-backbone', :version => '>= 0.7.1'
   after_bundler do
     generate 'backbone:install'
   end
